--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Hengyu Hu"
-description: "Research interests include:<br>- Multi-agent systems<br>- Disributed control and optimization  <br>-Autonomous intelligent systems"
+description: "Research interests include:<br>- Multi-agent systems<br>- Distributed control and optimization  <br>-Autonomous intelligent systems"
 repository               : "hengyuhu/hengyuhu.github.io"
 google_scholar_stats_use_cdn : true
 
